2008-11-30  kitone  <kitone@gna.org>

	* pl.po:
	Fix typo. (bug #12658, patch by Fryderyk Dziarmagowski)

2008-11-27  kitone  <kitone@gna.org>

	* pl.po:
	* zh_CN.po:
	Update.

2008-11-25  kitone  <kitone@gna.org>

	* fr.po:
	Update.

2008-11-24  kitone  <kitone@gna.org>

	* cs.po:
	* fr.po:
	* subtitleeditor.pot:
	Update translations.

2008-11-24  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update.

2008-11-16  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update.

2008-11-15  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with new files.

	* cs.po:
	Update by Luboš Staněk.

2008-11-13  kitone  <kitone@gna.org>

	* POTFILES.in:
	Add [type: gettext/ini] before the se-plugin name.

	* subtitleeditor.pot:
	Update with the last files (include se-plugin.in)

2008-11-13  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new filename. se-plugin.desktop.in to se-plugin.in

2008-11-12  kitone  <kitone@gna.org>

	* LINGUAS:
	New file.

	* POTFILES.in:
	Update with desktop.in files.

2008-11-10  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files.

2008-11-03  kitone  <kitone@gna.org>

	* POTFILES.in:
	Remove RegEx files.

2008-11-02  kitone  <kitone@gna.org>

	* hu.po:
	* tr.po:
	* zh_CN.po:
	Update.

2008-10-13  kitone  <kitone@gna.org>

	* es.po:
	* pl.po:
	* zh_CN.po:
	Update.

2008-10-13  kitone  <kitone@gna.org>

	* cs.po:
	* fr.po:
	* subtitleeditor.pot:
	Update.

2008-10-10  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with last files and messages.

2008-10-06  kitone  <kitone@gna.org>

	* fr.po:
	* subtitleeditor.pot:
	Update.

2008-09-25  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files.

2008-09-21  kitone  <kitone@gna.org>

	* fr.po:
	Update.

2008-09-20  kitone  <kitone@gna.org>

	* cs.po:
	* subtitleeditor.pot:
	Update.

2008-09-20  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update and fixes gtk-* strings.
