@@ -1,3 +1,8 @@
+2009-04-10  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	Update with new files.
+
 2008-11-30  kitone  <kitone@gna.org>
 
 	* pl.po:
